--- a/srcwww/tomato-sauce/src/styles.scss
+++ b/srcwww/tomato-sauce/src/styles.scss
@@ -1,1 +1,60 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$tomato-sauce-primary: mat.define-palette(mat.$indigo-palette);
+$tomato-sauce-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$tomato-sauce-warn: mat.define-palette(mat.$red-palette);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$tomato-sauce-theme: mat.define-light-theme((color: (primary: $tomato-sauce-primary,
+        accent: $tomato-sauce-accent,
+        warn: $tomato-sauce-warn,
+      ),
+      typography: mat.define-typography-config(),
+      density: 0));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include mat.all-component-themes($tomato-sauce-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+  --header-height: 50px;
+  --side-bar-min-width: 50px;
+  --side-bar-max-width: 40vw;
+
+  --content-max-width: 650px;
+  --content-padding: 15px;
+
+  --color-grey-light: #F6F8F8;
+  --color-grey-blue: #E0E8EE;
+  --color-grey-blue-dark: #264554;
+  --color-blue-primary: #39A2DB;
+  --color-red-primary: #F85959;
+}
+
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
