--- a/srcwww/tomato-sauce/src/app/page/widget/shared/icon-button/icon-button.component.html
+++ b/srcwww/tomato-sauce/src/app/page/widget/shared/icon-button/icon-button.component.html
@@ -3,7 +3,7 @@
         <button [ngClass]="this.active ? 'active' : 'standard'" (click)="this.callback(this.callback_args)">
             <img *ngIf="this.label != null" [src]="icon_path" [matTooltip]="this.label" matTooltipPosition="right">
 
-            <img *ngIf="this.label == null" [src]="icon_path" matTooltipPosition="right">
+            <img *ngIf="this.label == null" [src]="icon_path">
         </button>
     </div>
 </div>
