--- a/srcwww/tomato-sauce/src/styles.scss
+++ b/srcwww/tomato-sauce/src/styles.scss
@@ -37,6 +37,7 @@ $tomato-sauce-theme: mat.define-light-theme((color: (primary: $tomato-sauce-prim
 
 :root {
   --header-height: 60px;
+  --home-toolbar-height: 40px;
   --side-bar-min-width: 50px;
   --side-bar-max-width: 40vw;
 
