--- a/srcwww/tomato-sauce/src/app/page/brainstorm/brainstorm.component.html
+++ b/srcwww/tomato-sauce/src/app/page/brainstorm/brainstorm.component.html
@@ -1,8 +1,8 @@
 <div class="header">
-    <tomato-icon-button icon_path="assets/shared/trash.svg" [callback]="this.clear" [callback_args]="this"
+    <tomato-flat-button icon_path="assets/shared/trash.svg" [callback]="this.clear" [callback_args]="this"
         label="Clear">
 
-    </tomato-icon-button>
+    </tomato-flat-button>
 
 
     <div class="spacer"></div>
@@ -15,9 +15,9 @@
 
 <div [ngClass]="'content'">
     @for(message of this.chat_interface.conversation.chats; track message; let index = $index) {
-    <button *ngIf="message.role != 'system'" [class]="message.role" (click)="this.toggle_expand(this, index)">
+    <div *ngIf="message.role != 'system'" [class]="message.role" (click)="this.toggle_expand(this, index)">
         {{message.content}}
-    </button>
+    </div>
     <section *ngIf="message.role == 'assistant'" class="collapsible"
         [@collapse]="this.reference_index == null || index != this.expanded_index">
         @for(reference of this.chat_interface.list_references(this.reference_index!); track reference) {
